#163518696 Pagination support when fetching the articles (#44)
* [ft #164201481] write tests for artcile read,update, delete

* [ft #164201481] implement artciles read,update, delete

* [ft #164201481] remove console.log() statements

* [Chore #164201481] fetch all articles

* [Chore #164201481] fic failing tests

* [Chore #164201481] apply @esuka's feedback

* [Feature #164201481] document it with swagger

* [Feature #164201481] apply @luc, @yves, and @fabrice's feedback

* [Feature #164201481] fix the rebase conflicts and failing tests

* [Feature #164201481] remove unwanted packages from package.json

* [Feature #164201481] fix failing tests

* [Feature #164201481] remove unused packages

* [ft #164201481] write tests for artcile read,update, delete

* [ft #164201481] implement artciles read,update, delete

* [Chore #163518696] write pagination functionality tests

* [Chore #163518696] implement articles pagination functionality

* [Feature #163518696] apply @espoir's feedback for deleting an article

* [Feature #163518696] apply @espoir, @luc and, @esuka's feedback

* [Feature #163518696] use the same server error message
