# controllers/articleLikesController.js
@@ -18,11 +18,7 @@ export default class ArticleLikesController {
   static async like(req, res) {
     const { slug } = req.params;
     try {
-      const article = await Article.findOne({
-        where: {
-          slug
-        }
-      });
+      const article = await Article.findOne({ where: { slug } });
       if (!article) {
         return res.status(NOT_FOUND).json({
           message: "Article not found"
@@ -39,15 +35,21 @@ export default class ArticleLikesController {
           return res.status(CREATED).json({ message: "Successfully liked" });
         }
         if (articleLike.like) {
-          await articleLike.destroy();
-          return res.status(OK).json({ message: "Unliked successfully" });
+          await ArticleLike.destroy({
+            where: { userId: req.user.id, articleId: article.id }
+          });
+          return res.status(OK).json({ message: "Disliked successfully" });
         }
-        await articleLike.update({ like: true });
+        await ArticleLike.update(
+          { like: true },
+          { where: { userId: req.user.id, articleId: article.id } }
+        );
         return res.status(OK).json({ message: "Successfully liked" });
       });
     } catch (err) {
       res.status(INTERNAL_SERVER_ERROR).json({
-        message: "Unknown error",
+        message:
+          "Sorry, this is not working properly. We now know about this mistake and are working to fix it",
         errors: err.stack
       });
     }
@@ -55,6 +57,7 @@ export default class ArticleLikesController {
 
   /**
    * @description let user dislike article
+   * @param {object} -req The request object
    * @param {object} -res The response object
    * @return {object} - returns the response object
    */
@@ -62,36 +65,33 @@ export default class ArticleLikesController {
   static async dislike(req, res) {
     const { slug } = req.params;
     try {
-      const article = await Article.findOne({
-        where: {
-          slug
-        }
-      });
+      const article = await Article.findOne({ where: { slug } });
       if (!article) {
-        return res.status(NOT_FOUND).json({
-          message: "Article not found"
-        });
+        return res.status(NOT_FOUND).json({ message: "Article not found" });
       }
       await ArticleLike.findOrCreate({
-        where: {
-          userId: req.user.id,
-          articleId: article.id
-        },
+        where: { userId: req.user.id, articleId: article.id },
         defaults: { like: false }
       }).spread(async (articleLike, created) => {
         if (created) {
           return res.status(CREATED).json({ message: "Successfully disliked" });
         }
         if (!articleLike.like) {
-          await articleLike.destroy();
+          await ArticleLike.destroy({
+            where: { userId: req.user.id, articleId: article.id }
+          });
           return res.status(OK).json({ message: "Successfully removed dislike" });
         }
-        await articleLike.update({ like: false });
+        await ArticleLike.update(
+          { like: false },
+          { where: { userId: req.user.id, articleId: article.id } }
+        );
         return res.status(CREATED).json({ message: "Successfully disliked" });
       });
     } catch (err) {
       res.status(INTERNAL_SERVER_ERROR).json({
-        message: "Unknown error",
+        message:
+          "Sorry, this is not working properly. We now know about this mistake and are working to fix it",
         errors: err.stack
       });
     }
@@ -107,9 +107,7 @@ export default class ArticleLikesController {
     const { slug } = req.params;
     try {
       const article = await Article.findOne({
-        where: {
-          slug
-        },
+        where: { slug },
         include: [
           {
             model: User,
@@ -129,8 +127,7 @@ export default class ArticleLikesController {
       if (!article) {
         return res.status(NOT_FOUND).json({ message: "Article not found" });
       }
-
-      res.json({ article });
+      return res.status(OK).json({ article });
     } catch (err) {
       res.status(INTERNAL_SERVER_ERROR).json({
         message:
