# controllers/reportArticleController.js
@@ -3,7 +3,7 @@ import constants from "../helpers/constants";
 
 const { Article, ReportArticle } = models;
 
-const { INTERNAL_SERVER_ERROR, BAD_REQUEST, OK, CONFLICT } = constants.statusCode;
+const { INTERNAL_SERVER_ERROR, BAD_REQUEST, OK } = constants.statusCode;
 
 export default class ReportArticleController {
   /**
@@ -21,9 +21,7 @@ export default class ReportArticleController {
       if (!description) {
         return res.status(BAD_REQUEST).json({ message: "Please, give a reason" });
       }
-      const article = await Article.findOne({
-        where: { slug }
-      });
+      const article = await Article.findOne({ where: { slug } });
       const { id: articleId } = article.dataValues;
       const reportArticle = await ReportArticle.create({
         articleId,
@@ -36,7 +34,7 @@ export default class ReportArticleController {
       });
     } catch (error) {
       if (error.name === "SequelizeUniqueConstraintError") {
-        return res.status(CONFLICT).json({
+        return res.status(OK).json({
           message: "Article already reported"
         });
       }
