# models/Article.js
@@ -23,6 +23,7 @@ export default (sequelize, DataTypes) => {
     },
     {
       tableName: "articles",
+      paranoid: true,
       hooks: {
         beforeCreate(article) {
           article.slug = slug(
@@ -35,14 +36,14 @@ export default (sequelize, DataTypes) => {
   Article.associate = models => {
     Article.belongsTo(models.User, {
       foreignKey: "userId",
+      as: "author",
       onDelete: "CASCADE",
       hooks: true
     });
     Article.belongsToMany(models.Tag, {
-      through: "ArticleTag",
+      through: "ArticleTags",
       foreignKey: "articleId",
-      onDelete: "CASCADE",
-      hooks: true
+      as: "tagsList"
     });
     Article.hasMany(models.Rating, {
       foreignKey: "articleId",
@@ -51,6 +52,7 @@ export default (sequelize, DataTypes) => {
     Article.hasMany(models.Comment, {
       foreignKey: "articleId",
       onDelete: "CASCADE",
+      as: "comments",
       hooks: true
     });
     Article.hasMany(models.Bookmark, {
@@ -63,19 +65,10 @@ export default (sequelize, DataTypes) => {
       onDelete: "CASCADE",
       hooks: true
     });
-    Article.hasMany(models.ReportArticle, {
-      foreignKey: "articleId",
-      onDelete: "CASCADE",
-      hooks: true
-    });
-    Article.hasMany(models.ReportArticle, {
-      foreignKey: "articleId",
-      onDelete: "CASCADE",
-      hooks: true
-    });
     Article.belongsToMany(models.User, {
       through: models.ArticleLike,
       as: "likes",
+      onDelete: "CASCADE",
       foreignKey: "articleId"
     });
   };
